# AI-Agent-for-Query-Retrieval

./: .gitignore  Readme.md  logging.yaml  pyproject.toml
app/: main.py
app/core/: config.py  logger.py
app/dependencies/: text_processing.py  vector_store.py
app/endpoints/: ingest_document_api.py  query_retrival_api.py
app/model/: llm.py  main.py  schemas.py
